Fix flip/flop HttpRetryTest
testPostWithUnsupportedRetryAndFailureWhileRetrievingResponse

Testing retry scenario, the first POST request gets interrupted (e.g.
network cable loose connection during response), the second request gets
through. The test itself waited for the response of the second request
and checked if both requests were received by the remote server (also
locally set-up in this test). It seems like often the remote-server
also works through the requests in order (and adds something to
m_serverPostLog); however there are also multiple threads handling the
incoming requests, the remote server may as well handle the requests
out of order (e.g. first handle the second request, afterwards handle
the first one). But as we only wait for the second request/response the
servlet may not even have worked through the first request yet.
Solution: Wait until both requests have been received at the servlet
(timeout with 60 seconds in total if something went terribly wrong).